--- a/server/resources/[gringa]/notifyitens/web-side/style.css
+++ b/server/resources/[gringa]/notifyitens/web-side/style.css
@@ -26,11 +26,11 @@ body {
 	width: 115px;
 	height: 145px;
 	display: flex;
-	border-radius: 4px;
+	border-radius: 3px;
 	margin-right: 10px;
 	flex-direction: column;
 	text-shadow: 1px 1px #000;
-	background: rgba(25,28,35,0.75);
+	background: rgba(15,15,15,.75);
 	background-size: 86% !important;
 	background-position: center !important;
 	background-repeat: no-repeat !important;
@@ -45,7 +45,7 @@ body {
 
 .item .nameItem {
 	width: 100%;
-	color: #d0d0d0;
+	color: #CCC;
 	margin-top: 87px;
 	font-size: .68rem;
 	padding: 8px 10px;
@@ -55,24 +55,25 @@ body {
 	letter-spacing: 1px;
 	text-overflow: ellipsis;
 	text-transform: uppercase;
-	background: rgba(71,79,106,0.5);
+	background: #111;
 }
 
 .itemWeight {
-	color: #444;
+	color: #333;
 	padding: 8px;
 	font-size: .60rem;
 	position: absolute;
 	letter-spacing: 1px;
 	text-shadow: 0 0 #000;
 	text-transform: uppercase;
-	border-top-left-radius: 4px;
-	border-bottom-right-radius: 4px;
+	border-top-left-radius: 3px;
+	border-bottom-right-radius: 3px;
 	background: rgba(255,255,255,0.75);
 	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
 .itemAmount {
+	color: #999;
 	width: 115px;
 	font-size: .70rem;
 	text-align: right;
