--- a/server/resources/[gringa]/shops/web-side/css.css
+++ b/server/resources/[gringa]/shops/web-side/css.css
@@ -52,6 +52,7 @@ body {
 	width: 115px;
 	height: 145px;
 	display: flex;
+	border-radius: 3px;
 	flex-direction: column;
 	text-shadow: 1px 1px #000;
 	background: rgba(15,15,15,.5);
@@ -100,6 +101,7 @@ body {
 .itemPrice {
 	color: #a0ceb6;
 	text-shadow: none;
+	border-radius: 3px;
 	background: #2e6e4c;
 	padding: 3px 6px 4px;
 	margin: 14px 14px 0 0;
@@ -146,6 +148,7 @@ body {
 }
 
 input {
+	border-radius: 3px;
 	text-align: center;
 }
 
@@ -161,6 +164,7 @@ input::placeholder {
 	padding: 16px 0;
 	font-size: 12px;
 	text-align: center;
+	border-radius: 3px;
 	margin-bottom: 12px;
 	letter-spacing: 1px;
 	background: rgba(15,15,15,.75);
@@ -189,6 +193,7 @@ input::placeholder {
 	min-width: 596px;
 	max-width: 596px;
 	margin-bottom: 5px;
+	border-radius: 2px;
 	background: rgba(15,15,15,.75);
 }
 
@@ -211,6 +216,7 @@ input::placeholder {
 	min-width: 596px;
 	max-width: 596px;
 	margin-bottom: 5px;
+	border-radius: 2px;
 	background: rgba(15,15,15,.75);
 }
 
@@ -231,6 +237,7 @@ input::placeholder {
 	color: #ccc;
 	z-index: 9999;
 	font-size: 11px;
+	border-radius: 3px;
 	position: absolute;
 	letter-spacing: 1px;
 	padding: 20px 20px 15px;
@@ -264,6 +271,10 @@ input::placeholder {
 	font-size: 10px;
 	max-width: 250px;
 	margin-top: 5px;
+}
+
+.ui-tooltip description green {
+	color: #a0ceb6;
 }
 
 .ui-tooltip s {
