--- a/server/resources/[gringa]/vehmenu/web-side/style.css
+++ b/server/resources/[gringa]/vehmenu/web-side/style.css
@@ -4,63 +4,33 @@
 }
 
 html,body {
-	font-size: 12px;
+	color: #ccc;
+	font-size: 13px;
 	overflow: hidden;
+	font-family: "Roboto";
 	background: transparent;
-	font-family: "Roboto",Arial,Helvetica,sans-serif;
 }
 
-#vehicleBackground {
-	width: 100%;
-	bottom: 90px;
+#vehicleMenu {
+	left: 18%;
+	bottom: 50px;
 	display: none;
-	position: fixed;
-}
-
-#vehicleLayout {
-	width: 567px;
-	margin: 0 auto;
+	cursor: default;
+	max-width: 500px;
+	position: absolute;
 }
 
 .vehicleButton {
 	float: left;
-	width: 50px;
-	height: 50px;
-	padding: 0 10px 3px;
-	background: #272a35;
-	border-right: 1px solid #323644;
+	width: 150px;
+	margin-top: 5px;
+	margin-right: 5px;
+	border-radius: 3px;
+	padding: 10px 15px;
+	background: rgba(15,15,15,.75);
 }
 
 .vehicleButton:hover {
-	background: #343846;
-}
-
-.vehicleButton:first-child {
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
-}
-
-.vehicleButton:last-child {
-	border-right: 0;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-}
-
-.ui-helper-hidden-accessible {
-	display: none;
-}
-
-.ui-tooltip {
-	z-index: 9999;
-	padding: 10px 15px;
-	color: #d6d9df;
-	font-size: 11px;
-	border-radius: 4px;
-	position: absolute;
-	background: #212430;
-	letter-spacing: 1px;
-}
-
-.ui-tooltip:hover {
-	display: none;
+	color: #a0ceb6;
+	background: #2e6e4c;
 }
